@@ -1,3 +1,8 @@
+Wed Apr 23 22:23:03 PDT 2008  Peter Naulls  <peter@chocky.org>
+
+	* unix/custom.c, include/unixlib/local.h: New function to 
+	  allow opaque setting of custom select() function.
+
 Sun Apr  6 01:47:47 CEST 2008  John Tytgat  <John.Tytgat@aaug.net>
 
 	* include/pthread.h(struct __pthread_thread,
